update: nodejs 11.md

--- a/nodejs/contents/11.md
+++ b/nodejs/contents/11.md
@@ -85,7 +85,7 @@ exports.find = function(collectionName,json1,json2,json3,callback){
     })
 }
 
-// 增加数据 db.insert("user",{"name":"zhangsan"},function(){})
+// 增加数据 db.insert("user",{"name":"user_number"},function(){})
 exports.insert = function(collectionName,json,callback){
     _connect(function(db){
         db.collection(collectionName).insertOne(json,function(err,result){
@@ -95,7 +95,7 @@ exports.insert = function(collectionName,json,callback){
     })
 }
 
-// 更新数据 db.update('user',{"id":123},{'name':"zhangsan"},function(){})
+// 更新数据 db.update('user',{"id":123},{'name':"user_number"},function(){})
 exports.update=function(collectionName,json1,json2,callback){
     _connect(function(db){
         db.collection(collectionName).updateOne(json1,{
@@ -143,11 +143,6 @@ app.get('/',function(req,res){
     res.render('index');
 })
 
-app.get('/news',function(req,res){
-    res.send('news');
-
-})
-
 server.listen(3000,'127.0.0.1');
 
 io.on('connection', function (socket) {
@@ -157,7 +152,7 @@ io.on('connection', function (socket) {
         console.log(data)
         //socket.emit('servermessage',msg);
 
-        var msg = data.msg||'';  /*获取客户端的数据*/
+        var msg = data.msg || '';  /*获取客户端的数据*/
 
         //去服务器查询数据
         DB.find('article',{'title':{$regex:new RegExp(msg)}},{'title':1},function(err,data){
@@ -209,7 +204,7 @@ views/index.ejs
             $('#footer').get(0).scrollIntoView();
         })
 
-        var username='zhangsan'+Math.floor(Math.random()*10);
+        var username='user_number'+Math.floor(Math.random()*10);
 
         //群聊功能--聊天室
         $('#send').click(function(){
