update: nodejs 13.md

--- a/nodejs/contents/13.md
+++ b/nodejs/contents/13.md
@@ -32,12 +32,12 @@ io.on('connection', function (socket) {
     socket.join(groupid);  // 加入分组
 
     // 监听客户端发送的事件
-    socket.on('sendMsg',function(data){
+    socket.on('clientMsg',function(data){
         //console.log(data)
 
         // 广播给指定分组的用户 发送消息 两种方式
-        // io.to(groupid).emit('sendMsg','Server AddCart Ok'); // 通知分组内的所有用户 包括自己
-        socket.broadcast.to(groupid).emit('sendMsg','Server AddCart Ok'); // 通知分组内的用户不包括自己
+        // io.to(groupid).emit('serverMsg','Server Ok'); // 通知分组内的所有用户 包括自己
+        socket.broadcast.to(groupid).emit('serverMsg','Server Ok'); // 通知分组内的用户不包括自己
     })
 });
 ```
@@ -54,12 +54,12 @@ io.on('connection', function (socket) {
     var socket = io.connect('http://127.0.0.1:3000?groupid=1');
 
     // 接收服务器返回的信息
-    socket.on('sendMsg',function(data) {
+    socket.on('serverMsg',function(data) {
         console.log(data);
     });
 
     function sendMsg() {
-        socket.emit('sendMsg','sendMsg');
+        socket.emit('clientMsg','clientMsg');
     }
 </script>
 ```
