update: nodejs 13.md

--- a/nodejs/contents/13.md
+++ b/nodejs/contents/13.md
@@ -68,5 +68,5 @@ io.on('connection', function (socket) {
 
 - 不同客户端建立连接时传入不同的groupid即可实现分组, 分组内的通信是同步的，分组之间互不干扰
 - socket.join(groupid);  加入分组
-- io.to(groupid).emit('sendMsg','Server AddCart Ok')  通知分组内的所有用户
-- socket.broadcast.to(groupid).emit('sendMsg','Server AddCart Ok');  通知分组内的用户不包括自己
+- io.to(groupid).emit('serverMsg','Server Ok'); 通知分组内的所有用户 包括自己
+- socket.broadcast.to(groupid).emit('serverMsg','Server Ok'); 通知分组内的用户不包括自己
