update: se 4.md

--- a/software-engineering/contents/4.md
+++ b/software-engineering/contents/4.md
@@ -199,3 +199,7 @@ Virtual your mind
 </div>
 
 备注：图片托管于github，请确保网络的可访问性
+
+### 扩展阅读 
+
+- [深度解读：揭秘腾讯内部最有效的用户调研和需求分析方法](http://www.niaogebiji.com/article-12073-1.html)
