update: se 6,8.md

--- a/software-engineering/contents/6.md
+++ b/software-engineering/contents/6.md
@@ -18,7 +18,7 @@ Alistair Cockburn:方法论源于恐惧
 
 —— 出于对项目的超期、成本失控等等因素的恐惧，项目经理们从以前的经验出发，制定出了一些控制、监测项目的方法、技巧
 
-比如老板或项目管理者恐惧被一些掌握了核心技术的人员掐住脖子，从而指定了一些监管方法与技巧
+比如老板或项目管理者恐惧被一些掌握了核心技术的人员掐住脖子，从而制定了一些监管方法与技巧
 
 ### 方法论
 
