add: 11.md & update: 10.md

--- a/software-engineering/contents/10.md
+++ b/software-engineering/contents/10.md
@@ -22,7 +22,7 @@
 
 2 ) **面向对象**
 
-把构成问题的事务分解成各个对象。建立对象的目的不是为了完成一个 步骤，而是为了描叙某个事务在 整个解决问题的步骤中的行为。
+把构成问题的事务分解成各个对象。建立对象的目的不是为了完成一个步骤，而是为了描叙某个事务在整个解决问题的步骤中的行为。
 
 面向对象设计
 
@@ -49,7 +49,8 @@
 
 1. 一切皆对象!
 2. 如何识别对象?
-3. 如何确定对象之间的关系? 4. 如何确定对象的职责?
+3. 如何确定对象之间的关系? 
+4. 如何确定对象的职责?
 5. 如何设计出良好的对象模型?
 
 <div align="center">
@@ -63,7 +64,7 @@
 - 类:标准，共性，模板，包含属性和方法
 - 对象:具有模板所属特性的个体
 - 在软件系统构造过程中尽可能运用人类的自然思维方式
-- 面向对象技术追求解决问题的方法空间与客观世界问题的结构空 间一致
+- 面向对象技术追求解决问题的方法空间与客观世界问题的结构空间一致
 - 对象可具体:人地点和事件等
 - 对象可抽象:逻辑等
 
@@ -144,12 +145,11 @@
 ### 封装的作用
 
 - 实现信息隐藏，外部代码无法随意访问底层数据，只能以合乎规范的方式操作数据
-- 封装不仅仅可以隐藏数据，同时还可以隐藏底层数据存储 方式、算法等具体实现细节
+- 封装不仅仅可以隐藏数据，同时还可以隐藏底层数据存储方式、算法等具体实现细节
 - 维护数据的有效性和一致性
 - 适当的封装，使得代码易于理解和重用
 - 可以统一地实现业务逻辑，协同开发难度降低
 
- 
 通过封装实现了信息隐藏是面向对象更适应大型软件开发的根本原因之一
 
 ### 基本特性之继承
