update: se 13.md

--- a/software-engineering/contents/13.md
+++ b/software-engineering/contents/13.md
@@ -5,7 +5,7 @@
 
 ### 什么是模式
 
-- 模式记录了专家的经验，并且让非专家也能理解，其核心是 对真实世界的抽象和组织
+- 模式记录了专家的经验，并且让非专家也能理解，其核心是对真实世界的抽象和组织
 - 模式是发展的，是经过验证的专家经验的重用
 - 模式的名称构成了一份词汇表，帮助开发者更好的交流，更快的理解一个系统，更容易的重组一个系统
 - 模式的构成
@@ -16,9 +16,9 @@
 ### 模式分类
 
 - 代码模式——特定编程语言相关
-- 分析模式——透过需求表面了解本质问题 
+- 分析模式——透过需求表面了解本质问题
 - 设计模式——局部强化
-- 架构模式——软件系统的基础结构组织模型 
+- 架构模式——软件系统的基础结构组织模型
 - 建议学习顺序
     * 代码模式(忽略) 
     * 设计模式(重点) 
@@ -62,13 +62,13 @@
     * 工厂方法模式(Factory Method) 
     * 抽象工厂模式(Abstract Factory)
 - 简单工厂模式根据提供给它的数据，返回几个可能类中的一个类的实例
-- 简单工厂模式实际上不属于GoF 设计模式，但作为入门比较容易理解
+- 简单工厂模式实际上不属于GoF设计模式，但作为入门比较容易理解
 
 ### 单件模式
 
 - 单件模式做为“全局变量”的替代品出现
 - 具有全局变量的特点:全局可见、贯穿应用程序的整个生命期 
-- 也具有全局变量不具备的性质:同类型的对象实例只可能有一个 
+- 也具有全局变量不具备的性质:同类型的对象实例只可能有一个
 - 单件模式实现方法
     * 隐藏(private)构造函数
     * 类内维护一个静态、私有的本类对象的引用
@@ -76,9 +76,10 @@
 
 ### 观察者模式
 
-- 定义对象间的一种一对多的依赖关系 当一个对象的状态发生改变时, 所有依赖于它的对象都得到通知并被自动更新
-- 应用场景:当对一个对象的改变需要同时改变其它对象, 而不知 道具体有多少对象有待改变
-- 典型应用:MVC架构中，将表示层和数据逻辑层分开，逻辑层 数据变化后需要通知多个表示层
+- 定义对象间的一种一对多的依赖关系
+- 当一个对象的状态发生改变时, 所有依赖于它的对象都得到通知并被自动更新
+- 应用场景:当对一个对象的改变需要同时改变其它对象, 而不知道具体有多少对象有待改变
+- 典型应用:MVC架构中，将表示层和数据逻辑层分开，逻辑层数据变化后需要通知多个表示层
 
 ### 观察者模式结构
 
