update: se 15.md

--- a/software-engineering/contents/15.md
+++ b/software-engineering/contents/15.md
@@ -5,7 +5,7 @@
 
 ### 用例图与用例分析
 
-- 用例分析技术是Ivar Jacobson于1986年总结发布的一项源于实 践的需求分析技术
+- 用例分析技术是Ivar Jacobson于1986年总结发布的一项源于实践的需求分析技术
 - 用例图对系统、子系统或类与外部参与者的交互行为进行了可视化
 - 为软件需求规格化提供了一个可验证可度量的基本元素
 - 是项目计划、进度控制、测试等环节的基础
@@ -34,7 +34,9 @@
 
 ### UML用例
 
-- 用例是用户与计算机之间为达到某个目的的典型交互  用例的执行结果对参与者来说是可观测的和有意义的  用例必须由一个参与者发起
+- 用例是用户与计算机之间为达到某个目的的典型交互 
+- 用例的执行结果对参与者来说是可观测的和有意义的 
+- 用例必须由一个参与者发起
 - 用例应以动宾短语形式命名
 - 用例是指对系统提供的功能的描述
 - 用例对应一个层次性用户目标 
