update: se 15.md

--- a/software-engineering/contents/15.md
+++ b/software-engineering/contents/15.md
@@ -81,3 +81,15 @@
     * 构建用例图
 - 补充用例描述(详细完整的描述需求) 
 - 重构用例(识别用例间关系，组织用例)
+
+### 扩展
+
+设计模式作为一种传承下来的面向对象设计经验，一直得到程序员们的喜爱。是否掌握Gof23种设计模式甚至一度作为衡量程序员水平的标志之一。
+
+然而，To A Man with a Hammer, Everything Looks Like a Nail.
+
+于是，有人在"Hello world”程序中使用了4种设计模式。还有人想在一个程序中用尽 23 个 GoF 设计模式，据说失败了，因为他们只能使用 20 个。所以他们希望客户能让他们接着写程序，也许能再挤进去另外 3 个。
+
+他们是怎么了？中毒了么？跟着下面的链接去看看到底是怎么回事。但是，请不要失去对提高自己面向对象分析设计能力的信心。
+
+[设计模式有毒？？](https://www.zhihu.com/question/23757237)
