update: se 23.md

--- a/software-engineering/contents/23.md
+++ b/software-engineering/contents/23.md
@@ -209,3 +209,7 @@ DevOps
 - 关于自动化其实还有自动化检测报警，如某一个阈值出现后会自动通知运维人员去检查问题，甚至还有一些分析的程序
 - 自动化是一个非常大的话题，在这里面可以做的事情太多了，我们能做的是持续的完善改进这样一个过程
 - 自动化最终的目的是保证软件开发的质量达到要求，最终满足客户的价值
+
+### 扩展
+
+[DevOps并非你想的那么简单](http://os.51cto.com/art/201404/436824.htm)
