--- a/software-engineering/contents/27.md
+++ b/software-engineering/contents/27.md
@@ -145,3 +145,9 @@
     * QA：独立于项目组之外，为项目组提供规范流程，作为产品开发的依据，指导和审核项目组是否按规范执行，敏锐识别问题产生的原因, 将经验和纠正措施固化到流程之中，施行过程改进，避免以后的项目出现类似问题
     * 资深QA：在完成QA的工作之外，要求具备多年的项目管理和质量管理经验，根据企业的商业和业务需求，负责质量体系的架构设计，承担主要的规范文件的制定和改进工作，并指导QA的项目经理进行有效的工作
     * QA主管：要求具备扎实的资深的QA基本功之外，还要求跟踪和熟悉企业产品和业务，能够洞察不规范和责任定义不清的管理灰色地带，以指导员和医生的角度识别和标识出问题，发现问题，不是对比流程，不是查看实际操作与流程的不符之处，而是要找出影响质量，左右进度，降低效率，削弱效果，破坏组织目标达成的不良现状，这些现状包括：流程问题，技术问题，工具问题，管理问题等，针对这些问题，在流程方面，工程方法推行方面, 技术改进方面, 管理实施方面，人员激励方面给出解决方案或协调各方力量，组织专题会议，推进共同改进
+
+### 扩展
+
+- [怎么把质量保证（QA）的工作做好？](https://www.zhihu.com/question/19941597)
+- [QA这个职位主要做什么？重要么？](https://www.zhihu.com/question/19685881)
+- [质量管理精华贴](https://www.zhihu.com/topic/19641683/top-answers?page=5)
