update: se 35.md

--- a/software-engineering/contents/35.md
+++ b/software-engineering/contents/35.md
@@ -189,3 +189,16 @@
         <td>执行新功能，快速拓展开发团队</td>
     </tr>
 </table>
+
+### 扩展
+
+下图是一个精彩的微服务架构
+
+<div align="center">
+    <img width="800" src="./screenshot/115.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+[微服务实战（一）：微服务架构的优势与不足](http://kb.cnblogs.com/page/521880/)
