update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -4,10 +4,22 @@
 
 - 有n列的直方图，第j列高度为$h_j$, 求一个面积最大的子矩阵
 
+<div align="center">
+    <img width="400" src="./screenshot/4.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
 **格式要求**
 
 - 输入第一行正整数n，第二行n个空格隔开的非负整数
 - 数据范围: 所有直方图的列不会超过30000
+
+### 关键算法实现
+
+1 ) **算法1：时间复杂度为: $O(n^3)$的实现**
+
 **分析**
 
 - 矩形面积为底和高的乘积
@@ -15,12 +27,14 @@
 - 高为：$min \{h_i | a \leq i \leq b \}$
 - 面积：(b-a+1) * $min \{h_i | a \leq i \leq b \}$
 - 蛮力算法：枚举每一条可能的底边, 计算出高, 求出面积再取一个最大的
-
-### 关键算法实现
-
-**算法1：时间复杂度为: $O(n^3)$的实现**
+- 这里效率较低，可能通不过所有数据点，因为普通计算机的瓶颈是10的8次方
+- 当n为1000的时候，复杂度是$(10^3)^3 = 10^9$ 所以无法在1s内通过所有数据测试点
 
 ```cpp
+/*
+* n：表示n列直方图
+* h：表示高度的数组，h[i]表示第i列的高度(下标从1开始)
+*/
 int getResult(int n, int *h) {
     // 最后答案
     int res = 0;
@@ -30,7 +44,7 @@ int getResult(int n, int *h) {
         for (int b = a; b <= n; ++b) {
             // 记录最小高度, 要求是不超过3w, 这里只做数据的初始化
             int minH = 50000;
-            // 从a到b更新最小高度
+            // 第三层循环从a到b更新最小高度
             for (int c = a; c <= b; ++c) {
                 minH = min(minH, h[c]); // 更新最小高度
             }
@@ -43,7 +57,12 @@ int getResult(int n, int *h) {
 
 总结：太慢了，属于比较原始的蛮力算法，没有任何优化的算法, 这是能够直接想到的
 
-**算法2：减少循环, 时间复杂度为: $O(n^2)$的实现优化版本**
+2 ) **算法2：减少循环, 时间复杂度为: $O(n^2)$的实现优化版本**
+
+**分析**
+
+- 考虑无法修改从a到b的底边位置的双重循环枚举，但是可以优化对最小高度的求解
+- 从a到b最小高度$H_1$, 和 从a到b+1的最小高度$H_2$之间的关系: $H_2 = min\{ H_1, h_{b+1} \}$
 
 ```cpp
 int getResult(int n, int *h) {
@@ -67,33 +86,66 @@ int getResult(int n, int *h) {
 
 总结：优化思路是在a和b的底之间找到最小高度
 
-**算法3：通过卡位来计算，时间复杂度为: $O(n^2)$的实现优化版本**
+3 ) **算法3：通过卡位来计算，时间复杂度为: $O(n^2)$的实现优化版本**
+
+- 对于每一列，找到左右两端的卡位点，左卡位点lo, 右卡位点hi, 形成矩形的面积：$S = (hi - lo - 1) * h_i$
+- 枚举1列需要O(n), 每列找到卡位点也需要O(n)，合起来是$O(n^2)$
 
 ```cpp
 // todo
 
 ```
 
-**算法4：通过单调栈来计算，时间复杂度为: $O(n^2)$的实现优化版本**
+4 ) **算法4：通过单调栈来计算，时间复杂度为: $O(n^2)$的实现优化版本**
+
+- 从左至右枚举直方图的每一列，然后维护一个从栈底到栈顶是高度单调上升的栈
+- 根据下一个需要插入的列与栈顶的关系，进行弹出栈顶并更新答案或将该列压入栈中
+- 技巧在于左右两边加上哨兵
+- 这里同上，h是高度数组，h[i]表示第i列的高度(下标从1开始)，数组大小为n+2
+- 其中前后两端都加一个哨兵，分别是：h[0], h[n+1], 高度均为0
 
 ```cpp
-// todo
+// 单调栈方式实现
+int getResult(int n, int *h) {
+    // 最后答案
+    int res = 0;
+    // 单调栈，记录的是在h数组中的位置，栈顶所对应的高度是最高的，也就是单调递增
+    stack<int> myStack;
+    // 初始化单调栈，提前压入一个哨兵，总体有前后两个哨兵，分别是h[0]和h[n+1]，高度都是0
+    myStack.push(0);
 
+    // 进行栈过滤, 从1到n+1, 最后一个也是一个哨兵0, 可以循环n+1次
+    for (int i = 1; i <= n + 1; ++i) {
+        // 如果栈顶元素高度大于当前元素的高度时，则弹出栈顶
+        while(h[myStack.top()] > h[i]) {
+            // 记录栈顶元素高度
+            int nowHeight = h[myStack.top()];
+            // 弹出栈顶
+            myStack.pop();
+            // 比较最大面积
+            res = max(res, (i - myStack.top() - 1) * nowHeight);
+        }
+        // 将当前下标插入栈中
+        myStack.push(i);
+    }
+    return res;
+}
 ```
 
 总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：(hi - lo - 1) * hi
 
 **算法5：通过分治策略来处理**
 
-```cpp
-// todo
-```
+- 涉及到线段树的知识，此处暂不考虑
+
+### 测试输入数据
+
+- 输入：2 3 3 3 2
+- 输出：10
 
 ### 相关说明
 
-- 普通电脑中运算$10^8$是可以的, 到了9次方就会变慢
-- 同样的道理，服务器也是一样都会有一定的瓶颈，我们追求速度的话，一定要优化复杂度, 但蛮力算法通常是解决问题的第一步
-- 一般而言，优化顺序是：蛮力、贪心、减治和分治
+- 一般而言，算话优化顺序是：蛮力、贪心、减治和分治
 
 ### 扩展
 
