update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -92,11 +92,52 @@ int getResult(int n, int *h) {
 - 枚举1列需要O(n), 每列找到卡位点也需要O(n)，合起来是$O(n^2)$
 
 ```cpp
-// todo
+// 卡位计算, 相当蛮力的算法
+int getResult(int n, int *h) {
+    // 最后答案
+    int res = 0;
+    // 第一层循环枚举直方图所有的列, 从1~n, 表示第1列到第n列
+    for (int a = 1; a <= n; ++a) {
+        // 取出当前列的高度
+        int curH = h[a - 1];
+        // 左卡位点
+        int lo = 0;
+        // 左卡位最小值 是否有用 待确定
+        // int loVal = curH;
+        // 右卡位点
+        int hi = 0;
+        // 右卡位最小值 是否有用 待确定
+        // int hiVal = curH;
 
+        // 第二层找到当前列的左右卡位点，并计算最大矩形面积
+        for (int b = 0; b <= n+1; ++b) {
+            // 找到左卡位点，更新卡位点
+            if(b < a) {
+                // 左边从b到a找到左卡位点
+                // 这里做一个填空 TODO，如何线性的找到卡位点而不去做循环，cpp里面找到合适的方法来处理, 不能去循环，否则复杂度增大
+            } else {
+                // 右边从a到b找到右卡位点
+                // 这里做一个填空 TODO，如何线性的找到卡位点而不去做循环，cpp里面找到合适的方法来处理
+            }
+        }
+
+        /* 测试程序 */
+        /*
+        if(a==n) {
+            cout << "......" << endl;
+            cout << lo << endl;
+            cout << hi << endl;
+            cout << "......" << endl;
+        }
+        */
+        // 计算当前最大面积
+        res = max(res, (hi - lo - 1) * curH);
+    }
+    return res;
+}
 ```
 
-4 ) **算法4：通过单调栈来计算，时间复杂度为: $O(n^2)$的实现优化版本**
+4 ) **算法4：通过单调栈来计算，时间复杂度为: $O(n)$的实现优化版本**
 
 - 从左至右枚举直方图的每一列，然后维护一个从栈底到栈顶是高度单调上升的栈
 - 根据下一个需要插入的列与栈顶的关系，进行弹出栈顶并更新答案或将该列压入栈中
@@ -132,20 +173,79 @@ int getResult(int n, int *h) {
 }
 ```
 
-总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：(hi - lo - 1) * hi
+如果不考虑while, 程序变形:
+
+```cpp
+// 单调栈方式实现 形式转换
+int getResult(int n, int *h) {
+    // 最后答案
+    int res = 0;
+    // 单调栈，记录的是在h数组中的位置，栈顶所对应的高度是最高的，也就是单调递增
+    stack<int> myStack;
+
+    // 初始化单调栈，提前压入一个哨兵，总体有前后两个哨兵，分别是h[0]和h[n+1]，高度都是0
+    myStack.push(0);
+
+    // 进行栈过滤, 从1到n+1, 最后一个也是一个哨兵0, 可以循环n+1次
+    for (int i = 0; i <= n+1;) {
+        if(myStack.empty() || h[myStack.top()] <= h[i]) {
+            // 进栈
+            myStack.push(i);
+            i++;
+        } else {
+            // 记录当前栈顶元素高度
+            int nowHeight = h[myStack.top()];
+            // 弹出栈顶
+            myStack.pop();
+            // 比较最大面积
+            res = max(res, (i - myStack.top() - 1) * nowHeight);
+        }
+    }
+    return res;
+}
+```
+
+总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：(hi - lo - 1) * hi, 可见这是一个线性的算法O(n)
 
 **算法5：通过分治策略来处理**
 
-- 涉及到线段树的知识，此处暂不考虑
+**分析**
+
+- 同样是基于卡位点来实现的
+- 找到某一点作为pivot来分开左右两边(lo,h) k = findPivot(h, lo, hi), 
+- 分完之后, 还要考虑merge的方式，即左右和左右贯穿
+    * (1) 计算 maxRect(h,lo,k) 局部矩形面积
+    * (2) 计算 maxRect(h,k+1,hi) 局部矩形面积
+    * (3) 计算 h[k] * (hi - lo - 1) 局部矩形面积
+    * 找到上面三个的最大值作为局部最大值
+- 此算法框架的复杂度取决于所使用的技术(还可以考虑使用线段树的相关知识减少复杂度，此处不做过多说明)
+
+### 通用的输入程序
+
+```cpp
+int main() {
+    int n;
+    cin >> n;
+    int *height = new int[n + 2]();
+    for (int i = 1; i <= n; ++i) {
+        cin >> height[i];
+    }
+    cout << getResult(n, height) << endl;
+    delete[] height;
+    return 0;
+}
+```
 
 ### 测试输入数据
 
-- 输入：2 3 3 3 2
+- 输入：
+    * 5
+    * 2 3 3 3 2
 - 输出：10
 
 ### 相关说明
 
-- 一般而言，算话优化顺序是：蛮力、贪心、减治和分治
+- 一般而言，算法优化顺序是：蛮力 => 贪心 => 减治和分治
 
 ### 扩展
 
