update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -92,44 +92,31 @@ int getResult(int n, int *h) {
 - 枚举1列需要O(n), 每列找到卡位点也需要O(n)，合起来是$O(n^2)$
 
 ```cpp
-// 卡位计算, 相当蛮力的算法
+// 卡位计算, 蛮力算法
 int getResult(int n, int *h) {
     // 最后答案
     int res = 0;
     // 第一层循环枚举直方图所有的列, 从1~n, 表示第1列到第n列
     for (int a = 1; a <= n; ++a) {
         // 取出当前列的高度
-        int curH = h[a - 1];
+        int curH = h[a];
         // 左卡位点
         int lo = 0;
-        // 左卡位最小值 是否有用 待确定
-        // int loVal = curH;
         // 右卡位点
         int hi = 0;
-        // 右卡位最小值 是否有用 待确定
-        // int hiVal = curH;
-
         // 第二层找到当前列的左右卡位点，并计算最大矩形面积
-        for (int b = 0; b <= n+1; ++b) {
-            // 找到左卡位点，更新卡位点
-            if(b < a) {
-                // 左边从b到a找到左卡位点
-                // 这里做一个填空 TODO，如何线性的找到卡位点而不去做循环，cpp里面找到合适的方法来处理, 不能去循环，否则复杂度增大
-            } else {
-                // 右边从a到b找到右卡位点
-                // 这里做一个填空 TODO，如何线性的找到卡位点而不去做循环，cpp里面找到合适的方法来处理
+        // 找到左卡位点
+        for (lo = a - 1; lo >= 1; lo --){
+            if(h[lo] < curH) {
+                break;
             }
         }
-
-        /* 测试程序 */
-        /*
-        if(a==n) {
-            cout << "......" << endl;
-            cout << lo << endl;
-            cout << hi << endl;
-            cout << "......" << endl;
+        // 找到右卡位点
+        for (hi = a + 1; lo <= n; hi++){
+            if(h[hi] < curH) {
+                break;
+            }
         }
-        */
         // 计算当前最大面积
         res = max(res, (hi - lo - 1) * curH);
     }
@@ -227,6 +214,7 @@ int main() {
     int n;
     cin >> n;
     int *height = new int[n + 2]();
+    // 在这里控制输入中的height[0]和height[n+1]均为0
     for (int i = 1; i <= n; ++i) {
         cin >> height[i];
     }
