update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -28,7 +28,7 @@
 - 面积：(b-a+1) * $min \{h_i | a \leq i \leq b \}$
 - 蛮力算法：枚举每一条可能的底边, 计算出高, 求出面积再取一个最大的
 - 这里效率较低，可能通不过所有数据点，因为普通计算机的瓶颈是10的8次方
-- 当n为1000的时候，复杂度是$(10^3)^3 = 10^9$ 所以无法在1s内通过所有数据测试点
+- 当n为1000的时候，复杂度是$O(n^3) = (10^3)^3 = 10^9$ 所以无法在1s内通过所有数据测试点
 
 ```cpp
 /*
@@ -233,6 +233,8 @@ int main() {
 
 ### 相关说明
 
+- 如果没有什么高效的好的算法，先从蛮力算法开始解决问题，在这个过程中可能启发我们想到更高效的做法
+- 最后可以用蛮力算法来验证新算法的正确性
 - 一般而言，算法优化顺序是：蛮力 => 贪心 => 减治和分治
 
 ### 扩展
