--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -16,6 +16,13 @@
 - 输入第一行正整数n，第二行n个空格隔开的非负整数
 - 数据范围: 所有直方图的列不会超过30000
 
+**数据范围**
+
+- 对于 30% 的测试点，保证 n<=4
+- 对于 70% 的测试点，保证 n<=1000
+- 对于所有测试点，保证 n<=50000
+- 保证所有 h[i] 不超过 32767
+
 ### 关键算法实现
 
 1 ) **算法1：时间复杂度为: $O(n^3)$的实现**
@@ -42,7 +49,7 @@ int getResult(int n, int *h) {
     for (int a = 1; a <= n; ++a) {
         // 第二层循环枚举直方图右边界位置
         for (int b = a; b <= n; ++b) {
-            // 记录最小高度, 要求是不超过3w, 这里只做数据的初始化
+            // 要求，保证所有 h[i] 不超过 32767，记录最小高度, 这里只做数据的初始化，取一个比最大值大的值即可
             int minH = 50000;
             // 第三层循环从a到b更新最小高度
             for (int c = a; c <= b; ++c) {
@@ -70,7 +77,7 @@ int getResult(int n, int *h) {
     int res = 0;
     // 第一层循环枚举直方图左边界位置
     for (int a = 1; a <= n; ++a) {
-        // 记录最小高度, 要求是不超过3w, 这里只做数据的初始化
+        // 要求，保证所有 h[i] 不超过 32767，记录最小高度, 这里只做数据的初始化，取一个比最大值大的值即可
         int minH = 50000;
         // 第二层循环枚举直方图右边界位置
         // 思路：a到b的最小高度H1 和 a到b+1的最小高度H2的关系：H2=min(H1, h_{b+1})
