update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -96,7 +96,7 @@ int getResult(int n, int *h) {
 3 ) **算法3：通过卡位来计算，时间复杂度为: $O(n^2)$的实现优化版本**
 
 - 对于每一列，找到左右两端的卡位点，左卡位点lo, 右卡位点hi, 形成矩形的面积：$S = (hi - lo - 1) * h_i$
-- 枚举1列需要O(n), 每列找到卡位点也需要O(n)，合起来是$O(n^2)$
+- 枚举所有列需要O(n), 每列找到卡位点也需要O(n)，合起来是$O(n^2)$
 
 ```cpp
 // 卡位计算, 蛮力算法
@@ -199,7 +199,7 @@ int getResult(int n, int *h) {
 }
 ```
 
-总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：(hi - lo - 1) * hi, 可见这是一个线性的算法O(n)
+总结：对于每一列, 找到左右两端的卡位hi和lo, 形成的矩形面积为：底×高, 即：(hi - lo - 1) * h, 可见这是一个线性的算法O(n)
 
 **算法5：通过分治策略来处理**
 
@@ -208,11 +208,11 @@ int getResult(int n, int *h) {
 - 同样是基于卡位点来实现的
 - 找到某一点作为pivot来分开左右两边(lo,h) k = findPivot(h, lo, hi), 
 - 分完之后, 还要考虑merge的方式，即左右和左右贯穿
-    * (1) 计算 maxRect(h,lo,k) 局部矩形面积
-    * (2) 计算 maxRect(h,k+1,hi) 局部矩形面积
-    * (3) 计算 h[k] * (hi - lo - 1) 局部矩形面积
+    * (1) 计算 maxRect(h,lo,k) 左矩形面积
+    * (2) 计算 maxRect(h,k+1,hi) 右矩形面积
+    * (3) 计算 h[k] * (hi - lo - 1) 左右贯穿矩形面积
     * 找到上面三个的最大值作为局部最大值
-- 此算法框架的复杂度取决于所使用的技术(还可以考虑使用线段树的相关知识减少复杂度，此处不做过多说明)
+- 此算法框架的复杂度取决于所使用的技术(可以考虑使用线段树的相关知识减少复杂度，此处不做过多说明)
 
 ### 通用的输入程序
 
