--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -134,8 +134,17 @@ int getResult(int n, int *h) {
 4 ) **算法4：通过单调栈来计算，时间复杂度为: $O(n)$的实现优化版本**
 
 - 从左至右枚举直方图的每一列，然后维护一个从栈底到栈顶是高度单调上升的栈
+    * 比如，当前在k列，经过一系列扫描, 扫描k之前的元素，栈顶元素的高度是当前栈中最大的高度
+    * 这个栈存放的是直方图所有列的索引(编号)
 - 根据下一个需要插入的列与栈顶的关系，进行弹出栈顶并更新答案或将该列压入栈中
+    * 如果当前k的元素高度比栈顶元素的高度要大，那么当前元素k进栈，循环继续往前走
+    * 如果要小，则当前的k会作为矩形的右卡位点，栈顶元素作为矩形的左卡位点，栈顶元素的高度作为矩形的高度，算出当时的面积，栈顶元素出栈(已计算完成,出栈)
+    * 进而累计得出当前最大面积
+    * 循环继续往前走，每次进行判断，进栈和出栈
+    * 循环结束后即可得到整体最大矩形面积
 - 技巧在于左右两边加上哨兵
+    * 如果不在左右加上，需要判断各种边界条件
+    * 这是一个小trick
 - 这里同上，h是高度数组，h[i]表示第i列的高度(下标从1开始)，数组大小为n+2
 - 其中前后两端都加一个哨兵，分别是：h[0], h[n+1], 高度均为0
 
