update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -140,7 +140,7 @@ int getResult(int n, int *h) {
     * 如果当前k的元素高度比栈顶元素的高度要大，那么当前元素k进栈，循环继续往前走
     * 如果要小，则当前的k会作为矩形的右卡位点，栈顶元素作为矩形的左卡位点，栈顶元素的高度作为矩形的高度，算出当时的面积，栈顶元素出栈(已计算完成,出栈)
     * 进而累计得出当前最大面积
-    * 循环继续往前走，每次进行判断，进栈和出栈
+    * 循环继续往前走，每次进行判断，进栈和出栈，计算得到当前最大矩形面积
     * 循环结束后即可得到整体最大矩形面积
 - 技巧在于左右两边加上哨兵
     * 如果不在左右加上，需要判断各种边界条件
