update: dsa 6.md

--- a/dsa/contents/6.md
+++ b/dsa/contents/6.md
@@ -145,7 +145,7 @@ int getResult(int n, int *h) {
 - 技巧在于左右两边加上哨兵
     * 如果不在左右加上，需要判断各种边界条件
     * 这是一个小trick
-- 这里同上，h是高度数组，h[i]表示第i列的高度(下标从1开始)，数组大小为n+2
+- h是高度数组，h[i]表示第i列的高度(下标从1开始)，数组大小为n+2
 - 其中前后两端都加一个哨兵，分别是：h[0], h[n+1], 高度均为0
 
 ```cpp
