update: dsa 9.md

--- a/dsa/contents/9.md
+++ b/dsa/contents/9.md
@@ -30,7 +30,7 @@
                 int sum = (thisman != 'A') + (thisman == 'C') + (thisman == 'D') + (thisman != 'D');
                 if (sum == 3){ // 如果3句话为真，则输出当前可能性所假定的人为做好事者
                     cout << "做好事者为" << thisman << endl;
-                    g = 1; // 有解标志置1，表示找到解了 }
+                    g = 1; // 有解标志置1，表示找到解了
                 }
             }
             if (g != 1) {
@@ -67,7 +67,7 @@
                 }
             }
             if (g != 1) {
-                cout << "找不出做好事者" << endl; // 输出无解信息 }
+                cout << "找不出做好事者" << endl; // 输出无解信息
                 return 0;
             }
         }
@@ -104,25 +104,25 @@
         int flag = 0;
         for (int a = 0; a < 2; a++) {
             for (int b = 0; b < 2; b++) {
-            for (int c = 0; c < 2; c++) {
-                for (int d = 0; d < 2; d++) {
-                for (int e = 0; e < 2; e++) {
-                    for (int f = 0; f < 2; f++) {
-                    if ((a || b) + ((a && e) || (a && f) || (e && f)) + (!(a && d)) + ((b && c) || (!b && !c)) + ((c && !d) || (!c && d)) + (d || (!d && !e)) == 6) {
-                        flag = 1;
-                        string A, B, C, D, E, F;
-                        A = a ? "A" : "";
-                        B = b ? "B" : "";
-                        C = c ? "C" : "";
-                        D = d ? "D" : "";
-                        E = e ? "E" : "";
-                        F = f ? "F" : "";
-                        cout << "作案人员有：" << A << B << C << D << E << F << endl;
-                    }
+                for (int c = 0; c < 2; c++) {
+                    for (int d = 0; d < 2; d++) {
+                        for (int e = 0; e < 2; e++) {
+                            for (int f = 0; f < 2; f++) {
+                                if ((a || b) + ((a && e) || (a && f) || (e && f)) + (!(a && d)) + ((b && c) || (!b && !c)) + ((c && !d) || (!c && d)) + (d || (!d && !e)) == 6) {
+                                    flag = 1;
+                                    string A, B, C, D, E, F;
+                                    A = a ? "A" : "";
+                                    B = b ? "B" : "";
+                                    C = c ? "C" : "";
+                                    D = d ? "D" : "";
+                                    E = e ? "E" : "";
+                                    F = f ? "F" : "";
+                                    cout << "作案人员有：" << A << B << C << D << E << F << endl;
+                                }
+                            }
+                        }
                     }
                 }
-                }
-            }
             }
         }
         if (!flag) {
