add: dsa 11.md & update: 10.md

--- a/dsa/contents/10.md
+++ b/dsa/contents/10.md
@@ -34,7 +34,7 @@
     * 每一步走法策略都相同，故可以用递归算法
 - 程序实现
     ```cpp
-    #include <iostream> // cout 
+    #include <iostream>
     using namespace std;
     // 方案细节记录在take中(take数组记录了第几步(索引)采用的下台阶方案(1,2,3))，方案数用num累计 
     int take[99], num = 0;
