update: dsa 11.md

--- a/dsa/contents/11.md
+++ b/dsa/contents/11.md
@@ -32,7 +32,7 @@
         * 值为1时，表示编号i的人喜欢编号j的书籍
 - 书籍的状态也可以用一个一维数组来描述：`int asigned[5];`
     * 数组元素存储的是分配到下标对应书本的读者编号
-    * 若 assigned[book_id] == -1 则表示book_id这本书没有分配
+    * 若 `assigned[book_id] == -1` 则表示`book_id`这本书没有分配
     * 注意:数组下标是书的编号
     * 开始时，设置所有书本均未分配出去。有两种方法:
         * `int assigned[5] = { -1, -1, -1, -1, -1 };`
@@ -60,9 +60,12 @@
         {0, 0, 0, 1, 0}, 
         {0, 1, 0, 0, 1}
     };
-    int num; /// 方案数
-    int assigned[5]; // assigned[book_id] = reader_id，值为-1表示没有被分配 
-    void Try(int reader); // 递归函数
+    // 方案数
+    int num;
+     // assigned[book_id] = reader_id，值为-1表示没有被分配, 这是我们最终要的方案内容
+    int assigned[5];
+    // 递归函数
+    void Try(int reader);
 
     int main() {
         // 设置分书方案数初始值为0
@@ -71,7 +74,8 @@
         for (int book = 0; book < 5; book++) {
             assigned[book] = -1;
         }
-        Try(0); // 从第0个读者开始，寻找所有分书方案 
+        // 从第0个读者开始，寻找所有分书方案
+        Try(0);
         return 0;
     }
 
@@ -88,16 +92,18 @@
         }
         // 逐一为每本书找到合适的读者，每本书都要被所有的读者尝试一次
         for (int book = 0; book < 5; book++) {
-            // 是否满足分书条件的判断:
+            // 是否满足分书条件的判断: reader不喜欢book或者book已被分配，这时什么也不做, 去尝试下一本书
             if ((like[reader][book] != 1) || assigned[book] != -1) {
-                continue; // reader不喜欢book 或者 书籍已被分配，这时什么也不做, 去尝试下一本书
+                continue;
             }
-            // 此时：reader 喜欢 book 并且 书籍未被分配
-            // 记录当前这本书的分配情况
-            assigned[book] = reader; // 标记当前书籍分配给了谁
+            // 此时：reader 喜欢 book 并且book未被分配
+            // 记录当前这本book的分配情况，标记当前book分配给了谁
+            assigned[book] = reader;
             // 当前读者已分配书籍，为下一位读者分配合适书籍
             Try(reader + 1);
-            // 注意，这里当一种方案已经敲定的时候才会进行状态的重置，也就是Try函数 return的时候(所有读者都有了阅读方案)，当所有读者都分配完成之后，将书退还(回溯)，尝试另一种方案
+            // 注意，这里当一种方案已经敲定的时候才会进行状态的重置
+            // 也就是Try函数 return的时候(所有读者都有了阅读方案)
+            // 当所有读者都分配完成之后，也就是assigned[]的内容完成之后，将书退还(回溯)，尝试另一种方案
             assigned[book] = -1;
         }
     }
@@ -121,8 +127,8 @@
     };
     // 方案数
     int num;
-    /// 分配方案:记录5本书分别分给谁(用户编号) 
-    struct assign_state { int assigned[5]; } state; 
+    /// 分配方案:记录5本book分别分给谁(用户编号), 也就是解决问题的一种方案内容
+    struct assign_state { int assigned[5]; } state;
     void Try(int reader, assign_state state);
 
     int main() {
@@ -130,29 +136,34 @@
         for (int book = 0; book < 5; book++) {
             state.assigned[book] = -1; 
         }
-        Try(0, state); // 从第0个人(A)开始分书
+        // 从第0个人(A)开始分书
+        Try(0, state);
         return 0;
     }
 
-    void Try(int reader, assign_state state) { 
-        // 递归中止条件:所有读者均已分配合适书籍 
+    void Try(int reader, assign_state state) {
+        // 递归中止条件:所有读者均已分配合适书籍
         if (reader == 5) {
             num++;
             cout << "第" << num << "个方案(5本书的读者编号): ";
-            for (int i = 0; i < 5; i++) cout << state.assigned[i] << ' '; cout << endl;
+            for (int i = 0; i < 5; i++) {
+                cout << state.assigned[i] << ' ';
+            }
+            cout << endl;
             return;
         }
 
-        // 逐一为每本书找到合适的读者
+        // 逐一为每本book找到合适的读者
         for (int book = 0; book < 5; book++) {
             // 是否满足分书条件
-            if (like[reader][book] != 1 || state.assigned[book] != -1)
-            continue;
-            // 记录当前这本书的分配情况
-            assign_state next_state = state; /// 产生新的状态变量
+            if (like[reader][book] != 1 || state.assigned[book] != -1) {
+                continue;
+            }
+            // 记录当前这本book的分配情况 产生新的状态变量记录方案
+            assign_state next_state = state; 
             next_state.assigned[book] = reader;
 
-            /// 为下一位读者分配合适书籍
+            // 为下一位读者分配合适书籍
             Try(reader+1, next_state);
         }
     }
@@ -166,7 +177,7 @@
 - 所谓互不攻击，是说任何两个皇后都要满足: 
     * (1) 不在棋盘的同一行; 
     * (2) 不在棋盘的同一列; 
-    * (3) 不在棋盘的同一对角线上(左右两个对角线上)
+    * (3) 不在棋盘的同一对角线上
 
 <div align="center">
     <img width="400" src="./screenshot/14.jpg">
@@ -365,7 +376,7 @@
 
 **程序优化**
 
-- 考虑不使用回溯的方式，
+- 考虑不使用回溯的方式
 - 代码实现
     ```cpp
     #include <iostream> 
